[package]
name = "corgi"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.23", features = ["derive"] }
clap = { version = "4.5.43", features = ["derive"] }
color-eyre = "0.6"
eframe = { version = "0.32.0", default-features = false, features = ["default_fonts","wayland","wgpu","x11"] }
egui_material_icons = "0.4.0"
egui_taffy = "0.8.0"
image = "0.25"
little_exif = "0.6.14"
nanoserde = { version = "0.2.1", default-features = false, features = ["std", "json"] }
pollster = "0.4.0"
rfd = { version = "0.15.4", features = ["xdg-portal"] }
rug = "1.27"
taffy = "0.7.7"
tracing = "0.1"
tracing-subscriber = "0.3"
wesl = "0.2.0"
wgpu = "25"

[build-dependencies]
wesl = "0.2.0"

[profile.dev.package."*"]
opt-level = 3

