[package]
name = "corgi-fractal-engine"
version = "0.3.1"
edition = "2024"
authors = ["Kiran Wells <kiranwells at proton dot me>"]
description = "Corgi is a performance-focused fractal rendering engine capable of ultra-deep and highly flexible styling."
homepage = "https://github.com/KiranWells/corgi"
repository = "https://github.com/KiranWells/corgi"
license = "Apache-2.0"
keywords = ["fractals", "mandelbrot", "julia", "graphics"]

[package.metadata.bundle]
name = "Corgi"
identifier = "com.kiranwells.corgi"
# TODO
# icon
linux_mime_types = ["application/x-corgi-settings","image/png","image/jpeg","image/webp"]
linux_exec_args = "%f"

[lib]
name = "corgi"
path = "src/lib.rs"

[[bin]]
name = "corgi"
path = "src/main.rs"

[dependencies]
bytemuck = { version = "1.23", features = ["derive"] }
clap = { version = "4.5.43", features = ["derive"] }
color-eyre = "0.6"
directories = "6.0.0"
ecolor = { version = "0.33.0", features = ["serde"] }
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts","wayland","wgpu","x11"] }
egui_material_icons = "0.5.0"
egui_taffy = "0.10.0"
image = "0.25"
little_exif = "0.6.14"
pollster = "0.4.0"
rfd = { version = "0.15.4", features = ["xdg-portal"] }
rug = "1.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
taffy = "0.7.7"
toml = { version = "0.9.8", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wesl = "0.2.0"
wgpu = "27"

[build-dependencies]
wesl = "0.2.0"

[profile.dev.package."*"]
opt-level = 3

